source/_assets/scss/_hero.scss
/* ===== Hero CSS ===== */

.ud-hero {
  width: 100%;
  max-width: 1920px;
  margin-left: auto;
  margin-right: auto;
  background-color: #123c40;
  background-image: url("/assets/images/hero/hero-image.png");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center top;
  margin-top: 116px;
  padding-top: 127px;
  padding-bottom: 88px;
  min-height: 1210px;
  position: relative;
  overflow: hidden;
  display: block;
  line-height: normal;

  .container {
    max-width: 100%;
    padding-left: 72px;
    padding-right: 72px;
  }

  @media #{$xs} {
    .container {
      padding-left: 24px;
      padding-right: 24px;
    }
  }

  @media #{$sm, $md} {
    .container {
      padding-left: 40px;
      padding-right: 40px;
    }
  }

  &::before {
    display: none;
  }

  @media #{$xs} {
    margin-top: 0;
    padding-top: 120px;
    padding-bottom: 72px;
    min-height: auto;
  }

  @media #{$sm, $md, $lg} {
    min-height: 980px;
    padding-top: 150px;
  }
}

.ud-hero-content {
  max-width: 636px;
  position: relative;
  z-index: 2;

  @media #{$xs, $sm} {
    margin-bottom: 40px;
  }

  .ud-hero-title {
    color: var(--text-light);
    font-weight: bold;
    font-size: 64px;
    line-height: 1.22;
    margin-bottom: 30px;

    @media #{$sm} {
      font-size: 48px;
    }

    @media #{$xs} {
      font-size: 36px;
    }
  }

  .ud-hero-desc {
    font-weight: medium;
    font-size: 22px;
    color: var(--text-light);
    max-width: 636px;
    margin-bottom: 72px;

    @media #{$xs} {
      font-size: 18px;
    }
  }
}

.clients {
  margin-top: 84px;
  margin-bottom: 36px;

  @media #{$xs} {
    margin-top: 60px;
  }

  .headline p {
    font-weight: bold;
    font-size: 48px;
    text-align: center;
    color: var(--text-gray);
    line-height: normal;

    @media #{$xs} {
      font-size: 36px;
    }
  }

  .secondary p {
    font-size: 48px;
    text-align: center;
    color: var(--text-gray);
    line-height: normal;
    margin-top: 72px;

    @media #{$xs} {
      font-size: 36px;
      margin-top: 32px;
    }

    @media #{$sm} {
      margin-top: 36px;
    }
  }

  .logos {
    margin-top: 72px;

    @media #{$xs, $sm} {
      margin-top: 0;
    }

    div {
      display: flex;
      align-items: center;
      justify-content: center;
    }
  }
}

.ud-hero-buttons {
  .ud-main-btn {
    background-color: #ffc107ff;
    padding: 12px 16px;
    border-radius: 32px;
    font-size: 18px;
    font-weight: bold;
    color: var(--primary-color);

    &:hover {
      filter: brightness(1.25);
    }
  }

  .ud-secondary-btn {
    background: transparent;
    border: 1px solid var(--white);
    padding: 12px 16px;
    border-radius: 32px;
    font-size: 18px;
    color: var(--white);
    font-weight: bold;

    &:hover {
      background: var(--white);
      color: var(--primary-color);
    }
  }

  .ud-link-btn {
    &:hover {
      color: var(--white);
      background: transparent;
      opacity: 0.5;
    }
  }
}

.ud-hero-brands-wrapper {
  text-align: center;
  margin-bottom: 40px;

  img {
    transition: all 0.3s;
    opacity: 0.5;
    max-width: 250px;

    &:hover {
      opacity: 1;
    }
  }
}

.ud-hero-image {
  display: flex;
  width: 100%;
  position: static;
  height: 400px;
  margin-bottom: 30px;

  img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center top;
    border-radius: 0;
    transform: none;
  }

  &::after {
    display: none;
  }

  @media #{$xs, $sm} {
    display: flex;
  }

  @media #{$xs} {
    height: 300px;
  }

  .shape {
    position: absolute;
    z-index: -1;

    &.shape-1 {
      bottom: 0;
      left: -30px;
    }

    &.shape-2 {
      top: -20px;
      right: -20px;
    }
  }
}

